# g2opy

./: .gitmodules  README.md
g2o/core/: optimizable_graph.h
python/: CMakeLists.txt  g2o.cpp
python/core/: hyper_graph.h  optimizable_graph.h
